# newton-framework

./: .gitignore  CMakeLists.txt  CMakeSettings.json  ConfigGlobal.h  Dictionaries.cc  ErrorString.cc  HammerConfigBits.h  IA.cc  Locales.cc  MattsDecompiler.cc  MattsDecompiler.h  NSOF.h  NewtConfig.h  Newton.h  NewtonDebug.h  NewtonPackage.cc  NewtonPackage.h  NewtonPackagePrinter.cc  NewtonPackagePrinter.h  NewtonPackageWriter.cc  NewtonPackageWriter.h  NewtonTypes.h  NewtonWidgets.h  ObjectSystem.cc  ObjectSystem.h  Progress.txt  README.targtes.txt  REP.cc  REPTranslators.h  SerialNumber.cc  SplashScreenProto.s  Stubs.cc  historyCollectorMACRO.h  messagepad_SDL.cc  messagepad_SDL.h  newtc.cc  test.cpp
CommAPI/: CommAddresses.h  Transport.h  UserAbort.h
CommServices/: MNPService.h
Communications/: CommToolProto.s  EndpointClient.h  EndpointProto.s  SerialEndpoint.h
Compression/: Compression.h  CompressionProto.cc  CompressionProto.s  QDCompression.cc  QDCompression.h  Relocation.cc  SimpleStoreCompander.cc  SimpleStoreCompander.h  StoreCompander.h  StoreCompanderWrapper.cc
Compression/ArithmeticCompression/: Compression.cc
Compression/LZCompression/: LZCompressor.cc  LZCompressor.h  LZDecompressor.cc  LZDecompressor.h  LZStoreCompander.cc  LZStoreCompander.h
Compression/UnicodeCompression/: Compression.cc  UnicodeCompression.h
Compression/ZippyCompression/: Compression.cc  ZippyStoreDecompression.h
Frames/: Arrays.cc  DebugAPI.cc  Decompiler.cc  Exceptions.cc  Frames.cc  Frames.h  Interpreter.cc  Iterators.cc  Iterators.h  NewtonScript.cc  NewtonScript.h  ObjHeader.h  ObjectHeap.cc  ObjectHeap.h  ObjectPrinter.cc  Objects.h  Ref32.h  RefIO.cc  RefIO.h  RefMemory.cc  StreamObjects.cc  Strings.cc  Symbols.h
Frames/Compiler/: Compiler.cc  CompilerSupport.cc  InputStreams.cc  InputStreams.h  Lexer.cc  Opcodes.h  Parser.cc  y.tab.c
Graphics/: DrawImage.cc  DrawInk.cc  DrawShape.cc  DrawText.cc  Geometry.cc  Ink.cc  QDDrawing.cc  QDDrawing.h  QDPatterns.h  QDTypes.h  Quartz.h  Screen.cc  Screen.h  ScreenBits.cc  ScreenDriver.cc  ScreenDriver.h  ScreenDriverProto.cc  ScreenDriverProto.s
MPW Tools/REx/: Lexer.h
Mark/: ObjectPrinter.cc
Matt/: Decompiler.cc  Decompiler.h  ObjectPrinter.cc  ObjectPrinter.h  PackageWriter.cc  PackageWriter.h  Printer.cc  Printer.h
Memory Manager/: MemMgr.h
NTK/: NTK.h  TranslatorProto.cc  TranslatorProto.s
Newton.xcodeproj/: project.pbxproj
Newton/Base.lproj/: Main.storyboard
OS/: AppWorld.cc  Boot.cc  CompactState.h  ConfigOS600.h  HammerIO.h  KernelPhys.h  KernelTypes.h  MemoryLanes.h  NewtWorld.cc  PhysicalMemory.cc  ROMDomainManager.cc  ROMExtension.h  SharedTypes.h  SystemEvents.h  UserPorts.cc  UserPorts.h  UserSharedMem.h  UserTasks.h  VirtualMemory.h
OS/asm-LP64/: SWIGlue.s  SWIHandler.s
Platform/: MPController.mm  Platform.cc  PlatformDriverProto.s  SDLController.cc  SDLController.h  Voyager.cc
Protocols/: ProtoMacro.cc  ProtoMacro.s  ProtocolProto.cc  ProtocolProto.s  Protocols.cc  Protocols.h
ROMData/forNTK/: RefData.s  RefSymbols.s
ROMData/forNewton/: RSData.s  RSSymbols.s  RefData.s  RefSymbols.s
Recognition/: Array.cc  Inker.cc  TabletBuffer.cc  TabletDriver.cc  TabletDriver.h  TabletDriverProto.s
Sound/: Sound.cc  SoundDriver.cc  SoundDriverProto.s
Sound/Codecs/: CodecProto.cc  DTMFCodec.cc  DTMFCodec.h  GSMCodec.cc  GSMCodec.h  IMACodec.cc  IMACodec.h  MuLawCodec.cc  MuLawCodec.h  SoundCodec.h
Stores/: FaultBlocks.h  Flash.cc  Flash.h  FlashBlock.cc  FlashBlock.h  FlashCache.h  FlashProto.cc  FlashProto.s  FlashRange.cc  FlashStore.cc  FlashStore.h  FlashTracker.h  Hints.cc  Indexes.cc  Indexes.h  LargeObjectStore.cc  LargeObjectStore.h  MuxStore.cc  MuxStore.h  NStore.h  NodeCache.h  PackageStore.cc  PackageStore.h  PlainSoup.cc  Store.h  StoreMonitor.h  StoreMonitorProto.cc  StoreMonitorProto.s  StoreObjRef.h  StorePackages.h  StoreProto.cc  StoreProto.s  StoreWrapper.cc
Test/: main.cpp
Test.matt/test/test/: main.cpp
Utilities/: DataStuffing.cc  UStringUtils.cc  UStringUtils.h  Unicode.cc  Unicode.h
UtilityClasses/: ArrayIterator.h  DoubleQ.h  DynamicArray.h  ItemComparer.h  ItemTester.h  SingleQ.h  TraceEvents.cc
Views/: ErrorNotify.h  Notebook.cc  PickView.cc  Responder.h  RootView.h  ViewFlags.h
hello/: main.cpp
matt/: ObjectPrinter.h  PackageWriter.cc
tt/: CMakeCache.txt  Makefile  cmake_install.cmake
