#
# cmake -B build/Xcode  -G Xcode -DCMAKE_OSX_ARCHITECTURES=x86_64
#

cmake_minimum_required (VERSION 3.12.0 FATAL_ERROR)

project (Newton
  LANGUAGES C CXX ASM
  VERSION 2.1
)

set (CMAKE_CXX_STANDARD 20)

set ( SRCFILES
  test.cpp
  Dates.cc
  Dictionaries.cc
  ErrorString.cc
  IA.cc
  Locales.cc
  NTKStubs.cc
  NewtonPackage.cc
  ObjectSystem.cc
  Power.cc
  Preference.cc
  REP.cc
  SerialNumber.cc
  Stubs.cc
  Cards/CardEvents.cc
  Compression/ArithmeticCompression/Compression.cc
  Compression/Compression.cc
  Compression/CompressionProto.cc
# Compression/CompressionProto.s
  Compression/LZCompression/CopyOffset_bin.cc
  Compression/LZCompression/LZCompressionData-j.cc
  Compression/LZCompression/LZCompressor.cc
  Compression/LZCompression/LZDecompressor.cc
  Compression/LZCompression/LZStoreCompander.cc
  Compression/LZCompression/PushPopBits.cc
  Compression/QDCompression.cc
  Compression/Relocation.cc
  Compression/SimpleStoreCompander.cc
  Compression/StoreCompanderWrapper.cc
  Compression/UnicodeCompression/Compression.cc
  Compression/ZippyCompression/Compression.cc
  Frames/Arrays.cc
  Frames/CObjectBinaries.cc
  Frames/Compiler/Codegen.cc
  Frames/Compiler/Compiler.cc
  Frames/Compiler/CompilerSupport.cc
  Frames/Compiler/InputStreams.cc
  Frames/Compiler/Lexer.cc
  Frames/Compiler/Parser.cc
  Frames/Compiler/y.tab.c
  Frames/DebugAPI.cc
  Frames/Decompiler.cc
  Frames/Exceptions.cc
  Frames/Frames.cc
  Frames/Globals.cc
  Frames/Interpreter.cc
  Frames/Iterators.cc
  Frames/LargeBinaries.cc
  Frames/Lookup.cc
  Frames/MagicPointers.cc
  Frames/NewtonScript.cc
  Frames/ObjectHeap.cc
  Frames/ObjectPrinter.cc
  Frames/Objects.cc
  Frames/Pipes.cc
  Frames/RefIO.cc
  Frames/RefMemory.cc
  Frames/RefVar.cc
  Frames/RichStrings.cc
  Frames/ScriptInit.cc
  Frames/SortedArrays.cc
  Frames/StreamObjects.cc
  Frames/Strings.cc
  Frames/Symbols.cc
  Graphics/DrawImage.cc
  Graphics/DrawInk.cc
  Graphics/DrawShape.cc
  Graphics/DrawText.cc
  Graphics/Geometry.cc
  Graphics/Ink.cc
  Graphics/InkCompr.c
  Graphics/QDDrawing.cc
  Graphics/Screen.cc
  Graphics/ScreenDriver.cc
  Graphics/ScreenDriverProto.cc
#  Graphics/ScreenDriverProto.s
  Memory\ Manager/FakePointers.cc
  NTK/NTK.cc
  NTK/TranslatorProto.cc
#  NTK/TranslatorProto.s
  OS/PhysicalMemory.cc
  OS/ROMDomainManager.cc
  OS/Timers.cc
  Packages/Packages.cc
  Protocols/ProtoMacro.cc
#  Protocols/ProtoMacro.s
  Protocols/ProtocolProto.cc
#  Protocols/ProtocolProto.s
  Protocols/Protocols.cc
  ROMData/forNewton/RSData.s
  ROMData/forNewton/RSSymbols.s
  ROMData/forNewton/RefData.s
  ROMData/forNewton/RefSymbols.s
  Recognition/Array.cc
  Recognition/InkGeometry.cc
  Recognition/RecArea.cc
  Recognition/RecDomain.cc
  Recognition/RecObject.cc
  Recognition/RecType.cc
  Recognition/Transformations.cc
  Sound/Codecs/CodecProto.cc
#  Sound/Codecs/CodecProto.s
  Sound/Codecs/DTMFCodec.cc
  Sound/Sound.cc
  Stores/CachedReadStore.cc
  Stores/Cursors.cc
  Stores/Entries.cc
  Stores/FaultBlocks.cc
  Stores/Flash.cc
  Stores/FlashBlock.cc
  Stores/FlashCache.cc
  Stores/FlashDriver.cc
  Stores/FlashIterator.cc
  Stores/FlashProto.cc
#  Stores/FlashProto.s
  Stores/FlashRange.cc
  Stores/FlashStore.cc
  Stores/FlashTracker.cc
  Stores/Hints.cc
  Stores/Indexes.cc
  Stores/LargeObjectStore.cc
  Stores/LargeObjects.cc
  Stores/MuxStore.cc
  Stores/NodeCache.cc
  Stores/PSSManager.cc
  Stores/PackageStore.cc
  Stores/PlainSoup.cc
  Stores/Soups.cc
  Stores/StoreDriver.cc
  Stores/StoreMonitorProto.cc
#  Stores/StoreMonitorProto.s
  Stores/StoreObjRef.cc
  Stores/StoreProto.cc
#  Stores/StoreProto.s
#  Stores/Store.cc
  Stores/StoreStreamObjects.cc
  Stores/StoreWrapper.cc
  Stores/Stores.cc
  Stores/Tags.cc
  Stores/UnionSoup.cc
  Testing/TestAgent.cc
  Toolbox/Maths.cc
  Utilities/DataStuffing.cc
  Utilities/UStringUtils.cc
  Utilities/Unicode.cc
  UtilityClasses/DynamicArray.cc
  UtilityClasses/List.cc
  UtilityClasses/NArray.cc
  UtilityClasses/Queues.cc
)

set ( HEADERFILES
  test.cpp
  Dates.cc
  Dictionaries.cc
  ErrorString.cc
  IA.cc
  Locales.cc
  NTKStubs.cc
  NewtConfig.h
  Newton.h
  NewtonDebug.h
  NewtonErrors.h
  NewtonExceptions.h
  NewtonMemory.h
  NewtonPackage.h
  NewtonTime.h
  NewtonTypes.h
  NewtonWidgets.h
  ObjectSystem.cc
  Power.cc
  Preference.cc
  REP.cc
  SerialNumber.cc
  Stubs.cc
  Cards/CardEvents.h
  Compression/Compression.h
  Compression/LZCompression/CopyOffset_bin.h
  Compression/LZCompression/LZCompressionData-j.h
  Compression/LZCompression/LZCompressor.h
  Compression/LZCompression/LZDecompressor.h
  Compression/LZCompression/LZStoreCompander.h
  Compression/LZCompression/PushPopBits.h
  Compression/QDCompression.h
  Compression/Relocation.h
  Compression/SimpleStoreCompander.h
  Compression/StoreCompander.h
  Compression/UnicodeCompression/UnicodeCompression.h
  Compression/ZippyCompression/ZippyStoreDecompression.h
  Frames/Arrays.h
  Frames/CObjectBinaries.h
  Frames/Compiler/Compiler.h
  Frames/Compiler/InputStreams.h
  Frames/Compiler/y.tab.h
  Frames/DebugAPI.h
  Frames/Frames.h
  Frames/Funcs.h
  Frames/Globals.h
  Frames/Interpreter.h
  Frames/Iterators.h
  Frames/LargeBinaries.h
  Frames/Lookup.h
  Frames/MagicPointers.h
  Frames/NewtonScript.h
  Frames/ObjectHeap.h
  Frames/Objects.h
  Frames/Pipes.h
  Frames/RefIO.h
  Frames/RefMemory.h
  Frames/RefVar.h
  Frames/RichStrings.h
  Frames/StreamObjects.h
  Frames/Strings.h
  Frames/Symbols.h
  Graphics/DrawShape.h
  Graphics/DrawText.h
  Graphics/Geometry.h
  Graphics/Ink.h
  Graphics/QDDrawing.h
  Graphics/Screen.h
  Graphics/ScreenDriver.h
  Memory\ Manager/MemMgr.h
  NTK/NTK.h
  OS/PhysicalMemory.h
  OS/Timers.h
  Packages/PackageEvents.h
  Packages/PackageManager.h
  Packages/PackageParts.h
  Packages/PackageTypes.h
  Packages/PartHandler.h
  Packages/PartPipe.h
  Protocols/Protocols.h
  Recognition/InkGeometry.h
  Recognition/RecArea.h
  Recognition/RecDomain.h
  Recognition/RecObject.h
  Recognition/Transformations.h
  Sound/Codecs/DTMFCodec.h
  Sound/Sound.h
  Stores/CachedReadStore.h
  Stores/Cursors.h
  Stores/Entries.h
  Stores/FaultBlocks.h
  Stores/Flash.h
  Stores/FlashBlock.h
  Stores/FlashCache.h
  Stores/FlashDriver.h
  Stores/FlashIterator.h
  Stores/FlashRange.h
  Stores/FlashStore.h
  Stores/FlashTracker.h
  Stores/Hints.h
  Stores/Indexes.h
  Stores/LargeObjectStore.h
  Stores/LargeObjects.h
  Stores/MuxStore.h
  Stores/NodeCache.h
  Stores/PSSManager.h
  Stores/PackageStore.h
  Stores/PlainSoup.h
  Stores/Soups.h
  Stores/StoreDriver.h
  Stores/StoreStreamObjects.h
  Stores/StoreWrapper.h
  Stores/Stores.h
  Stores/UnionSoup.h
  Testing/TestAgent.h
  Toolbox/Maths.h
  Utilities/DataStuffing.h
  Utilities/UStringUtils.h
  Utilities/Unicode.h
  UtilityClasses/DynamicArray.h
  UtilityClasses/List.h
  UtilityClasses/NArray.h
)

SET ( UNUSED_SRC_FILES
  Cards/CardServer.cc
  CommAPI/CMService.cc
  CommAPI/CommOptions.cc
  CommServices/MNPService.cc
  Communications/CMWorld.cc
  Communications/CommManager.cc
  Communications/CommTool.cc
  Communications/CommToolProto.s
  Communications/CommToolProtocol.cc
  Communications/DES.c
  Communications/Docker.cc
  Communications/DockerDynArray.cc
  Communications/Endpoint.cc
  Communications/EndpointClient.cc
  Communications/EndpointEvents.cc
  Communications/EndpointProto.s
  Communications/EzEndpoint.cc
  Communications/LocalTalkTool.cc
  Communications/MNPOptions.cc
  Communications/MNPTool.cc
  Communications/OptionArray.cc
  Communications/SerialEndpoint.cc
  Communications/SerialOptions.cc
  Communications/SerialTool.cc
  Compression/CompressionImpl.s
#  Frames/Compiler/Compiler (original).cc
#  Frames/Compiler/CompilerSupport (original).cc
  Frames/Funcs.cc
#  Frames/MagicPointers.s
  Graphics/NewtQD.cc
  Graphics/Quartz.cc
  Graphics/Regions.cc
  Graphics/ScreenBits.cc
  Graphics/ScreenDriverImpl.s
  Graphics/Shapes.cc
  MPW Tools/AIFtoNTK/AIFtoNTK-0.cc
  MPW Tools/AIFtoNTK/AIFtoNTK.cc
  MPW Tools/AIFtoNTK/MachOtoNTK.cc
  MPW Tools/Packer/Packer.cc
  MPW Tools/Packer/Relocation.cc
  MPW Tools/Packer/Reporting.cc
  MPW Tools/Packer/StringTable.cc
  MPW Tools/Pram/Pram.cc
  MPW Tools/ProtocolGenTool/impl.s
  MPW Tools/ProtocolGenTool/macro.s
  MPW Tools/REx/CRC16.cc
  MPW Tools/REx/Chunk.cc
  MPW Tools/REx/ClauseHandlers.cc
  MPW Tools/REx/Lexer.cc
  MPW Tools/REx/Options.cc
  MPW Tools/REx/PackageAccessor.cc
  MPW Tools/REx/PatchTable.cc
  MPW Tools/REx/REx.cc
  MPW Tools/REx/Reporting.cc
  MPW Tools/REx/Research.cc
  Memory\ Manager/Handles.cc
  Memory\ Manager/Heap.cc
  Memory\ Manager/MemMgr.cc
  Memory\ Manager/Pointers.cc
  Memory\ Manager/SafeHeap.cc
  NTK/TranslatorImpl.s
  OS/AppWorld.cc
  OS/Boot.cc
  OS/Environment.cc
  OS/Gestalt.cc
  OS/Glue.cc
  OS/Interrupt.cc
  OS/KernelMonitor.cc
  OS/KernelObjects.cc
  OS/KernelPhys.cc
  OS/KernelPorts.cc
  OS/KernelSemaphore.cc
  OS/KernelTasks.cc
  OS/MMU.c
  OS/Marshaling.cc
  OS/MemArch.cc
  OS/MemObjManager.cc
  OS/NameServer.cc
  OS/NewtWorld.cc
  OS/PageManager.cc
  OS/PowerManager.cc
  OS/RAM.cc
  OS/ROMExtension.cc
  OS/SWInterrupt.cc
  OS/Scheduler.cc
  OS/Semaphore.cc
  OS/SerialTool.cc
  OS/SharedMem.cc
  OS/StackManager.cc
  OS/SystemEvents.cc
  OS/UserDomain.cc
  OS/UserMonitor.cc
  OS/UserObjects.cc
  OS/UserPorts.cc
  OS/UserSharedMem.cc
  OS/UserTasks.cc
  OS/VirtualMemory.cc
  OS/asm-ARM/SWIBoot.s
  OS/asm-ARM/SWIGlue.s
  OS/asm-ARM/SWIHandler.s
  OS/asm-LP64/SWIGlue.s
  OS/asm-LP64/SWIHandler.s
  OS/asm-PPC/SWIGlue.s
  OS/asm-PPC/SWIHandler.s
  OS/asm-i386/SWIGlue.s
  OS/asm-i386/SWIHandler.s
  Packages/PackageManager.cc
  Packages/PartHandler.cc
  Packages/Parts.cc
  Platform/MPInterface.cc
  Platform/Platform.cc
  Platform/PlatformDriverProto.s
  Platform/Voyager.cc
  Printing/Printing.cc
  Protocols/ProtocolImpl.s
  QD/Quartz.cc
  ROMData/32bitObjectPrinter.cc
  ROMData/RefStar.s
  ROMData/ResMaker/32bitObjects.cc
  ROMData/ResMaker/Reporting.cc
  ROMData/ResMaker/ResMaker.cc
  ROMData/ResMaker/SymbolTable.cc
  ROMData/ResMaker/UnRelocate.cc
  ROMData/forNTK/MagicPointers.s
  ROMData/forNTK/RSData.s
  ROMData/forNTK/RSSymbols.s
  ROMData/forNTK/RefData.s
  ROMData/forNTK/RefSymbols.s
  ROMData/forNewton/MagicPointers.s
  Recognition/Arbiter.cc
  Recognition/ClickRecognizer.cc
  Recognition/Controller.cc
  Recognition/EdgeListRecognizer.cc
  Recognition/Inker.cc
  Recognition/Journal.cc
  Recognition/RecStroke.cc
  Recognition/RecUnit.cc
  Recognition/Recognition.cc
  Recognition/Recognizers.cc
  Recognition/SIUnit.cc
  Recognition/ShapeRecognizer.cc
  Recognition/Stroke.cc
  Recognition/StrokeRecognizer.cc
  Recognition/Stroker.cc
  Recognition/Tablet.cc
  Recognition/TabletBuffer.cc
  Recognition/TabletDriver.cc
  Recognition/TabletDriverImpl.s
  Recognition/TabletDriverProto.s
  Recognition/Unit.cc
  Recognition/WordRecognizer.cc
  Sound/Codecs/CodecImpl.s
  Sound/Codecs/GSMCodec.cc
  Sound/Codecs/IMACodec.cc
  Sound/Codecs/MuLawCodec.cc
  Sound/Codecs/gsm-1.0-pl12/src/add.c
  Sound/Codecs/gsm-1.0-pl12/src/code.c
  Sound/Codecs/gsm-1.0-pl12/src/debug.c
  Sound/Codecs/gsm-1.0-pl12/src/decode.c
  Sound/Codecs/gsm-1.0-pl12/src/gsm_create.c
  Sound/Codecs/gsm-1.0-pl12/src/gsm_decode.c
  Sound/Codecs/gsm-1.0-pl12/src/gsm_destroy.c
  Sound/Codecs/gsm-1.0-pl12/src/gsm_encode.c
  Sound/Codecs/gsm-1.0-pl12/src/gsm_explode.c
  Sound/Codecs/gsm-1.0-pl12/src/gsm_implode.c
  Sound/Codecs/gsm-1.0-pl12/src/gsm_option.c
  Sound/Codecs/gsm-1.0-pl12/src/gsm_print.c
  Sound/Codecs/gsm-1.0-pl12/src/long_term.c
  Sound/Codecs/gsm-1.0-pl12/src/lpc.c
  Sound/Codecs/gsm-1.0-pl12/src/preprocess.c
  Sound/Codecs/gsm-1.0-pl12/src/rpe.c
  Sound/Codecs/gsm-1.0-pl12/src/short_term.c
  Sound/Codecs/gsm-1.0-pl12/src/table.c
  Sound/Codecs/gsm-1.0-pl12/src/toast.c
  Sound/Codecs/gsm-1.0-pl12/src/toast_alaw.c
  Sound/Codecs/gsm-1.0-pl12/src/toast_audio.c
  Sound/Codecs/gsm-1.0-pl12/src/toast_lin.c
  Sound/Codecs/gsm-1.0-pl12/src/toast_ulaw.c
  Sound/Codecs/gsm-1.0-pl12/voipster/gsm_decode.c
  Sound/Codecs/gsm-1.0-pl12/voipster/gsm_encode.c
  Sound/Codecs/gsm-1.0-pl12/voipster/gsm_state.c
  Sound/SoundChannel.cc
  Sound/SoundDriver.cc
  Sound/SoundDriverProto.s
  Sound/SoundServer.cc
  Sound/UserSoundChannel.cc
  SplashScreenProto.s
  Startup.cc
  Stores/FlashImpl.s
  Stores/HackStore.cc
  Stores/Indexes copy.cc
  Stores/Store.cc
  Stores/StoreImpl.s
  Stores/StoreMonitorImpl.s
  Stores/StorePackages.cc
  Testing/CommServer.cc
  Toolbox/CompMath.c
  UtilityClasses/Buffer.cc
  UtilityClasses/BufferList.cc
  UtilityClasses/BufferPipe.cc
  UtilityClasses/BufferSegment.cc
  UtilityClasses/CircleBuf.cc
  UtilityClasses/EndpointPipe.cc
  UtilityClasses/Events.cc
  UtilityClasses/MemObject.cc
  UtilityClasses/MemoryPipe.cc
  UtilityClasses/TaskSafeRingBuffer.cc
  UtilityClasses/TimerQueue.cc
  UtilityClasses/TraceEvents.cc
  Views/Alerts.cc
  Views/Animation.cc
  Views/Application.cc
  Views/BusyBox.cc
  Views/DataView.cc
  Views/Debug.cc
  Views/DragAndDrop.cc
  Views/GaugeView.cc
  Views/KeyboardView.cc
  Views/Librarian.cc
  Views/ModalViews.cc
  Views/Notebook.cc
  Views/ParagraphView.cc
  Views/PickView.cc
  Views/PictureView.cc
  Views/PolygonView.cc
  Views/Responder.cc
  Views/RootView.cc
  Views/SplashScreen.cc
  Views/SplashScreenProto.s
  Views/TextView.cc
  Views/View.cc
  Views/ViewObject.cc
  Views/ViewStubs.cc
  Views/ViewUtils.cc
  main.m
)

source_group(
  TREE "${CMAKE_CURRENT_SOURCE_DIR}"
  PREFIX "Source Files"
  FILES ${SRCFILES} ${HEADERFILES}
)

add_executable (test ${SRCFILES} ${HEADERFILES})
target_compile_definitions(test PRIVATE forMac forFramework)
target_compile_definitions(test PRIVATE __LP64__=1)
target_include_directories ( test PRIVATE
  ${CMAKE_SOURCE_DIR}
  ${CMAKE_SOURCE_DIR}/Frames
  ${CMAKE_SOURCE_DIR}/UtilityClasses
  ${CMAKE_SOURCE_DIR}/OS
  ${CMAKE_SOURCE_DIR}/NTK
  ${CMAKE_SOURCE_DIR}/CommAPI
  ${CMAKE_SOURCE_DIR}/Frames/Compiler
  ${CMAKE_SOURCE_DIR}/Views
  ${CMAKE_SOURCE_DIR}/Graphics
  ${CMAKE_SOURCE_DIR}/Protocols
  ${CMAKE_SOURCE_DIR}/Stores
  ${CMAKE_SOURCE_DIR}/Utilities
  ${CMAKE_SOURCE_DIR}/Recognition
  ${CMAKE_SOURCE_DIR}/Cards
  ${CMAKE_SOURCE_DIR}/Sound
  ${CMAKE_SOURCE_DIR}/Sound/Codecs
  ${CMAKE_SOURCE_DIR}/Toolbox
  ${CMAKE_SOURCE_DIR}/Packages
  ${CMAKE_SOURCE_DIR}/Compression
  ${CMAKE_SOURCE_DIR}/Memory\ Manager
  ${CMAKE_SOURCE_DIR}/Communications
  ${CMAKE_SOURCE_DIR}/Compression/LZCompression
  ${CMAKE_SOURCE_DIR}/Compression/ZippyCompression
  ${CMAKE_SOURCE_DIR}/Compression/UnicodeCompression
)

target_link_libraries ( test PRIVATE
  "-framework Cocoa"
  "-framework CoreServices"
  "-framework ApplicationServices"
  "-framework AudioUnit"
  "-framework IOKit"
)


set ( MP_SRC_FILES
  Views/DragAndDrop.cc
  Views/Application.cc
  OS/AppWorld.cc
  Recognition/Array.cc
  Frames/Arrays.cc
  OS/Boot.cc
  Views/BusyBox.cc
  Communications/CommManager.cc
  UtilityClasses/DynamicArray.cc
  OS/Environment.cc
  Protocols/ProtoMacro.s
  Memory\ Manager/FakePointers.cc
  UtilityClasses/Events.cc
  Frames/Exceptions.cc
  Frames/Frames.cc
  OS/Gestalt.cc
  Frames/Globals.cc
  Frames/Compiler/InputStreams.cc
  OS/Interrupt.cc
  NTK/TranslatorProto.s
  Frames/Iterators.cc
  OS/KernelMonitor.cc
  Communications/Endpoint.cc
  OS/KernelObjects.cc
  OS/KernelPhys.cc
  OS/KernelPorts.cc
  Sound/SoundChannel.cc
  OS/KernelSemaphore.cc
  Communications/EndpointProto.s
  OS/KernelTasks.cc
  Sound/Codecs/MuLawCodec.cc
  Views/Librarian.cc
  UtilityClasses/List.cc
  Frames/Lookup.cc
  Protocols/ProtocolProto.s
  Frames/MagicPointers.cc
  main.m
  Stores/FlashProto.s
  Toolbox/Maths.cc
  OS/MemArch.cc
  UtilityClasses/MemObject.cc
  OS/MemObjManager.cc
  OS/NameServer.cc
  OS/NewtWorld.cc
  Views/Notebook.cc
  Frames/ObjectHeap.cc
  Frames/ObjectPrinter.cc
  Communications/DES.c
  Frames/Objects.cc
  OS/PageManager.cc
  Views/PictureView.cc
  Stores/FlashDriver.cc
  UtilityClasses/Queues.cc
  Recognition/Recognition.cc
  Stores/StoreObjRef.cc
  Frames/RefMemory.cc
  Frames/RefVar.cc
  Views/Responder.cc
  Frames/Compiler/Codegen.cc
  Frames/RichStrings.cc
  OS/asm-LP64/SWIHandler.s
  Views/RootView.cc
  OS/Scheduler.cc
  Sound/SoundDriverProto.s
  OS/Semaphore.cc
  OS/SharedMem.cc
  OS/StackManager.cc
  Frames/Strings.cc
  Frames/Symbols.cc
  OS/SystemEvents.cc
  Recognition/Tablet.cc
  UtilityClasses/TimerQueue.cc
  OS/Timers.cc
  Frames/Compiler/Parser.cc
  Utilities/Unicode.cc
  OS/UserMonitor.cc
  OS/UserObjects.cc
  OS/UserPorts.cc
  OS/UserSharedMem.cc
  OS/UserTasks.cc
  Utilities/UStringUtils.cc
  Views/View.cc
  Views/ViewObject.cc
  Views/ViewUtils.cc
  OS/VirtualMemory.cc
  OS/ROMExtension.cc
  Protocols/Protocols.cc
  OS/MMU.c
  OS/PhysicalMemory.cc
  Preference.cc
  Platform/MPController.mm
  Locales.cc
  Frames/Interpreter.cc
  Views/TextView.cc
  Views/Debug.cc
  Graphics/Shapes.cc
  Views/ModalViews.cc
  Recognition/RecObject.cc
  Recognition/RecArea.cc
  Recognition/RecDomain.cc
  Stores/FlashIterator.cc
  Stores/Flash.cc
  Frames/Compiler/Lexer.cc
  Stores/FlashRange.cc
  Recognition/RecType.cc
  OS/asm-LP64/SWIGlue.s
  Frames/LargeBinaries.cc
  Frames/Compiler/Compiler.cc
  Recognition/Stroke.cc
  REP.cc
  Frames/Compiler/y.tab.c
  Frames/Compiler/CompilerSupport.cc
  Communications/CommToolProtocol.cc
  Platform/Platform.cc
  OS/SWInterrupt.cc
  Sound/Codecs/IMACodec.cc
  Stores/StoreMonitorProto.s
  NTK/NTK.cc
  Sound/Codecs/GSMCodec.cc
  Compression/Compression.cc
  Recognition/Inker.cc
  CommAPI/CommOptions.cc
  Printing/Printing.cc
  Frames/ScriptInit.cc
  Frames/StreamObjects.cc
  Packages/Packages.cc
  Frames/Pipes.cc
  Stores/StoreWrapper.cc
  Stores/PackageStore.cc
  OS/ROMDomainManager.cc
  Stores/CachedReadStore.cc
  Stores/FaultBlocks.cc
  Stores/LargeObjectStore.cc
  Stores/Stores.cc
  Compression/UnicodeCompression/Compression.cc
  Compression/ArithmeticCompression/Compression.cc
  Compression/ZippyCompression/Compression.cc
  Compression/LZCompression/CopyOffset_bin.cc
  Compression/LZCompression/LZCompressionData-j.cc
  Compression/LZCompression/LZCompressor.cc
  Stores/MuxStore.cc
  Compression/LZCompression/LZDecompressor.cc
  Compression/LZCompression/LZStoreCompander.cc
  Compression/LZCompression/PushPopBits.cc
  Compression/StoreCompanderWrapper.cc
  Stores/LargeObjects.cc
  Frames/NewtonScript.cc
  Frames/RefIO.cc
  Graphics/DrawImage.cc
  Graphics/DrawInk.cc
  Graphics/DrawShape.cc
  Graphics/DrawText.cc
  Graphics/InkCompr.c
  Views/SplashScreen.cc
  ObjectSystem.cc
  Memory\ Manager/Heap.cc
  Memory\ Manager/SafeHeap.cc
  Stores/FlashBlock.cc
  Memory\ Manager/MemMgr.cc
  Sound/Sound.cc
  Sound/Codecs/DTMFCodec.cc
  Sound/UserSoundChannel.cc
  Compression/SimpleStoreCompander.cc
  Communications/DockerDynArray.cc
  UtilityClasses/Buffer.cc
  UtilityClasses/BufferList.cc
  ROMData/forNewton/RSSymbols.s
  UtilityClasses/BufferPipe.cc
  Stores/FlashStore.cc
  UtilityClasses/BufferSegment.cc
  UtilityClasses/CircleBuf.cc
  Frames/CObjectBinaries.cc
  Sound/Codecs/CodecProto.s
  Compression/CompressionProto.s
  Stores/Cursors.cc
  Dates.cc
  Stores/FlashCache.cc
  Dictionaries.cc
  Stores/Entries.cc
  ErrorString.cc
  Stores/Hints.cc
  IA.cc
  ROMData/forNewton/RefSymbols.s
  Stubs.cc
  Stores/Indexes.cc
  Graphics/Ink.cc
  OS/Marshaling.cc
  Recognition/InkGeometry.cc
  Recognition/Journal.cc
  UtilityClasses/MemoryPipe.cc
  Stores/NodeCache.cc
  OS/UserDomain.cc
  Communications/OptionArray.cc
  Stores/PlainSoup.cc
  Compression/QDCompression.cc
  Graphics/QDDrawing.cc
  Graphics/Geometry.cc
  Recognition/RecStroke.cc
  Recognition/RecUnit.cc
  Recognition/SIUnit.cc
  Stores/Soups.cc
  Stores/StoreDriver.cc
  Stores/StoreProto.s
  ROMData/forNewton/RSData.s
  Stores/StoreStreamObjects.cc
  Recognition/Stroker.cc
  Recognition/TabletBuffer.cc
  Stores/Tags.cc
  Testing/TestAgent.cc
  Recognition/Transformations.cc
  Stores/UnionSoup.cc
  Recognition/TabletDriver.cc
  Recognition/TabletDriverProto.s
  UtilityClasses/NArray.cc
  Compression/Relocation.cc
  Views/Animation.cc
  UtilityClasses/EndpointPipe.cc
  Communications/CommTool.cc
  Graphics/ScreenDriverProto.s
  Graphics/ScreenDriver.cc
  Cards/CardEvents.cc
  SerialNumber.cc
  Graphics/Screen.cc
  CommAPI/CMService.cc
  SplashScreenProto.s
  Communications/CommToolProto.s
  Packages/PackageManager.cc
  Recognition/Controller.cc
  Sound/SoundServer.cc
  Graphics/Regions.cc
  Sound/SoundDriver.cc
  Platform/PlatformDriverProto.s
  Views/ViewStubs.cc
  Views/KeyboardView.cc
  Views/ParagraphView.cc
  Views/GaugeView.cc
  ROMData/forNewton/RefData.s
  Power.cc
  Frames/SortedArrays.cc
  Platform/Voyager.cc
  Startup.cc
  UtilityClasses/TraceEvents.cc
  Cards/CardServer.cc
  Packages/PartHandler.cc
  Views/Alerts.cc
  Stores/PSSManager.cc
  OS/PowerManager.cc
  Packages/Parts.cc
  Communications/CMWorld.cc
  Platform/MPInterface.cc
  Recognition/Recognizers.cc
  Views/PickView.cc
  Frames/Decompiler.cc
  Stores/FlashTracker.cc
  NewtonPackage.cc
  Recognition/Unit.cc
  Recognition/WordRecognizer.cc
  Recognition/ShapeRecognizer.cc
  Recognition/Arbiter.cc
  Communications/SerialOptions.cc
  Recognition/EdgeListRecognizer.cc
  Recognition/StrokeRecognizer.cc
  Recognition/ClickRecognizer.cc
  UtilityClasses/TaskSafeRingBuffer.cc
  Utilities/DataStuffing.cc
  Frames/DebugAPI.cc
  Views/DataView.cc
)

set ( MP_HEADER_FILES
  CommServices/MNPService.h
  Power/CardPower.h
  Power.h
  MPW\ Tools/ProtocolGenTool/impl.h
  MPW\ Tools/REx/NewtonKit.h
  MPW\ Tools/REx/RExArray.h
  MPW\ Tools/REx/CRC16.h
  MPW\ Tools/REx/Chunk.h
  MPW\ Tools/REx/Reporting.h
  MPW\ Tools/REx/PatchTable.h
  MPW\ Tools/REx/Options.h
  MPW\ Tools/REx/PackageAccessor.h
  MPW\ Tools/REx/ClauseHandlers.h
  MPW\ Tools/REx/Lexer.h
  MPW\ Tools/Packer/NewtonKit.h
  MPW\ Tools/Packer/Allocation.h
  MPW\ Tools/Packer/Reporting.h
  MPW\ Tools/Packer/AIF.h
  MPW\ Tools/Packer/Relocation.h
  MPW\ Tools/Packer/StringTable.h
  REPTranslators.h
  NewtonWidgets.h
  ConfigGlobal.h
  historyCollectorMACRO.h
  HAL/DelayTimer.h
  HAL/HALOptions.h
  HAL/SerialChipV2.h
  HAL/RegisterRdWr.h
  HAL/SerialChip.h
  HAL/SerialChipRegistry.h
  NewtonTypes.h
  Dictionaries.h
  Cards/CardEvents.h
  Platform/MPController.h
  Platform/Platform.h
  Printing/PrintErrors.h
  Printing/DriverCallbacks.h
  Printing/DotDrivers.h
  Printing/ConfigPrinting.h
  Printing/PrintTypes.h
  Lantern/LanternNSEvents.f.h
  Lantern/LanternTypes.h
  Lantern/LanternNS.f.h
  Lantern/LanternErrors.h
  Lantern/LanternEvents.h
  SerialNumber.h
  NewtonTime.h
  NewtonDebug.h
  Stores/StorePackages.h
  Stores/FlashTracker.h
  Stores/PSSManager.h
  Stores/StoreMonitor.h
  Stores/PackageStore.h
  Stores/FlashRange.h
  Stores/Soups.h
  Stores/Stores.h
  Stores/LargeObjects.h
  Stores/CachedReadStore.h
  Stores/Indexes.h
  Stores/FlashCache.h
  Stores/FlashDriver.h
  Stores/LargeObjectStore.h
  Stores/MuxStore.h
  Stores/Hints.h
  Stores/FlashBlock.h
  Stores/NStore.h
  Stores/PSSTypes.h
  Stores/StoreWrapper.h
  Stores/Cursors.h
  Stores/Flash.h
  Stores/FlashStore.h
  Stores/NodeCache.h
  Stores/PlainSoup.h
  Stores/StoreRootObjects.h
  Stores/StoreDriver.h
  Stores/StoreObjRef.h
  Stores/Entries.h
  Stores/FlashIterator.h
  Stores/StoreStreamObjects.h
  Stores/UnionSoup.h
  Stores/Store.h
  Stores/FaultBlocks.h
  Frames/ObjectHeap.h
  Frames/NewtGlobals.h
  Frames/RefIO.h
  Frames/Symbols.h
  Frames/NewtonScript.h
  Frames/DebugAPI.h
  Frames/StreamObjects.h
  Frames/RSSymbols.h
  Frames/RefMemory.h
  Frames/RefStack.h
  Frames/Interpreter.h
  Frames/RefVar.h
  Frames/RSData.h
  Frames/PrecedentsForIO.h
  Frames/Globals.h
  Frames/Objects.h
  Frames/Strings.h
  Frames/LargeBinaries.h
  Frames/MagicPointers.h
  Frames/DeveloperNotification.h
  Frames/Arrays.h
  Frames/ConfigFrames.h
  Frames/ObjHeader.h
  Frames/Pipes.h
  Frames/Lookup.h
  Frames/Funcs.h
  Frames/CObjectBinaries.h
  Frames/FakeFrames.h
  Frames/Ref32.h
  Frames/Iterators.h
  Frames/FrameDefs.h
  Frames/Frames.h
  Frames/Compiler/Compiler.h
  Frames/Compiler/Compiler-AST.h
  Frames/Compiler/InputStreams.h
  Frames/Compiler/Tokens.h
  Frames/Compiler/Opcodes.h
  Frames/Compiler/y.tab.h
  Frames/ROMResources.h
  Frames/RichStrings.h
  NewtonErrors.h
  HammerConfigBits.h
  UtilityClasses/DynamicArray.h
  UtilityClasses/DoubleQ.h
  UtilityClasses/EndpointPipe.h
  UtilityClasses/EventHandler.h
  UtilityClasses/MemObject.h
  UtilityClasses/ListLoop.h
  UtilityClasses/Events.h
  UtilityClasses/MemoryPipe.h
  UtilityClasses/ItemComparer.h
  UtilityClasses/TimerQueue.h
  UtilityClasses/List.h
  UtilityClasses/Buffer.h
  UtilityClasses/SingleQ.h
  UtilityClasses/ListIterator.h
  UtilityClasses/TaskSafeRingBuffer.h
  UtilityClasses/BufferPipe.h
  UtilityClasses/NArray.h
  UtilityClasses/ArrayIterator.h
  UtilityClasses/TraceEvents.h
  UtilityClasses/ItemTester.h
  UtilityClasses/BufferList.h
  UtilityClasses/CircleBuf.h
  UtilityClasses/BufferSegment.h
  NewtonExceptions.h
  Utilities/DataStuffing.h
  Utilities/UnicodePrivate.h
  Utilities/Unicode.h
  Utilities/Sorting.h
  Utilities/UStringUtils.h
  Testing/CommServer.h
  Testing/TestAgent.h
  NSOF.h
  NTK/NTKProtocol.h
  NTK/protoProtoEditor.h
  NTK/NTK.h
  ObjectSystem.h
  NewtConfig.h
  Toolbox/CompMath.h
  Toolbox/FixedMath.h
  Toolbox/Maths.h
  Packages/PackageManager.h
  Packages/PackageParts.h
  Packages/PackageEvents.h
  Packages/PartHandler.h
  Packages/PartPipe.h
  Packages/PackageTypes.h
  Compression/UnicodeCompression/UnicodeCompression.h
  Compression/LZCompression/CopyOffset_bin.h
  Compression/LZCompression/LZDecompressor.h
  Compression/LZCompression/PushPopBits.h
  Compression/LZCompression/LZCompressionData-j.h
  Compression/LZCompression/LZCompressor.h
  Compression/LZCompression/LZStoreCompander.h
  Compression/Compression.h
  Compression/ZippyCompression/ZippyStoreDecompression.h
  Compression/StoreCompander.h
  Compression/Relocation.h
  Compression/SimpleStoreCompander.h
  Compression/QDCompression.h
  Dates.h
  NewtonMemory.h
  PCMCIA/CardDefines.h
  PCMCIA/ConfigPCMCIA.h
  PCMCIA/CardPCMCIA.h
  PCMCIA/CardHandler.h
  PCMCIA/CardSocket.h
  OS/UserTasks.h
  OS/Timers.h
  OS/PageManager.h
  OS/Semaphore.h
  OS/KernelTypes.h
  OS/NewtonGestalt.h
  OS/SystemEvents.h
  OS/NewtWorld.h
  OS/MemArch.h
  OS/UserPorts.h
  OS/RAMInfo.h
  OS/SharedTypes.h
  OS/RDM.h
  OS/UserPhys.h
  OS/HammerIO.h
  OS/TaskGlobals.h
  OS/SWI.h
  OS/Scheduler.h
  OS/AppWorld.h
  OS/OSErrors.h
  OS/SharedMem.h
  OS/KernelMonitor.h
  OS/UserMonitor.h
  OS/KernelPhys.h
  OS/KernelTasks.h
  OS/MemoryLanes.h
  OS/PowerManager.h
  OS/MMU.h
  OS/LongTime.h
  OS/KernelPorts.h
  OS/ROMExtension.h
  OS/StackManager.h
  OS/Environment.h
  OS/ConfigOS600.h
  OS/UserGlobals.h
  OS/KernelObjects.h
  OS/KernelGlobals.h
  OS/UserObjects.h
  OS/KernelSemaphore.h
  OS/VirtualMemory.h
  OS/Interrupt.h
  OS/CompactState.h
  OS/PhysicalMemory.h
  OS/UserSharedMem.h
  OS/ImportExportItems.h
  OS/UserDomain.h
  OS/MemObjManager.h
  OS/NameServer.h
  Recognition/WordRecognizer.h
  Recognition/ClickRecognizer.h
  Recognition/Recognizers.h
  Recognition/Arbiter.h
  Recognition/RecUnit.h
  Recognition/RecArea.h
  Recognition/Transformations.h
  Recognition/Unit.h
  Recognition/RecDomain.h
  Recognition/TabletDriver.h
  Recognition/Stroke.h
  Recognition/RecStroke.h
  Recognition/Controller.h
  Recognition/SIUnit.h
  Recognition/TabletBuffer.h
  Recognition/InkGeometry.h
  Recognition/ShapeRecognizer.h
  Recognition/RecObject.h
  Recognition/TabletTypes.h
  Recognition/Journal.h
  Recognition/Tablet.h
  Recognition/InkTypes.h
  Recognition/EdgeListRecognizer.h
  Recognition/StrokeCentral.h
  Recognition/StrokeRecognizer.h
  Recognition/Recognition.h
  Recognition/Inker.h
  Recognition/Stroker.h
  Debugger.h
  Newton.h
  PSS/CompactState.h
  PSS/StoreDriver.h
  NewtonPackage.h
  Graphics/Regions.h
  Graphics/Ink.h
  Graphics/NewtQD.h
  Graphics/Quartz.h
  Graphics/QDTypes.h
  Graphics/Drawing.h
  Graphics/ConfigQD.h
  Graphics/ScreenDriver.h
  Graphics/QDGeometry.h
  Graphics/QDDrawing.h
  Graphics/QDPatterns.h
  Graphics/Paths.h
  Graphics/TextStyles.h
  Graphics/DrawShape.h
  Graphics/PrivateMacTypes.h
  Graphics/Screen.h
  Graphics/DrawText.h
  Graphics/Experimental.h
  Graphics/NewtonQD.h
  Graphics/Geometry.h
  Views/PictureView.h
  Views/Animation.h
  Views/ParagraphView.h
  Views/ErrorNotify.h
  Views/ViewStubs.h
  Views/DataView.h
  Views/SplashScreen.h
  Views/Application.h
  Views/PickView.h
  Views/View.h
  Views/RootView.h
  Views/BusyBox.h
  Views/Modal.h
  Views/Clipboard.h
  Views/DragAndDrop.h
  Views/Alerts.h
  Views/ViewObject.h
  Views/KeyboardKeys.h
  Views/KeyboardView.h
  Views/Librarian.h
  Views/ViewFlags.h
  Views/Responder.h
  Views/GaugeView.h
  Views/Notebook.h
  Views/TextView.h
  Sound/Sound.h
  Sound/UserSoundChannel.h
  Sound/Codecs/MuLawCodec.h
  Sound/Codecs/DTMFCodec.h
  Sound/Codecs/IMACodec.h
  Sound/Codecs/SoundCodec.h
  Sound/Codecs/GSMCodec.h
  Sound/SoundServer.h
  Sound/SoundErrors.h
  Sound/SoundDriver.h
  CommAPI/Endpoint.h
  CommAPI/CommManagerInterface.h
  CommAPI/CommOptions.h
  CommAPI/CommAddresses.h
  CommAPI/CMWorld.h
  CommAPI/CommServices.h
  CommAPI/UserAbort.h
  CommAPI/CMService.h
  CommAPI/Transport.h
  CommAPI/OptionArray.h
  Protocols/Protocols.h
  REP.h
  Communications/SerialEndpoint.h
  Communications/EndpointEvents.h
  Communications/DockProtocol.h
  Communications/SerialOptions.h
  Communications/PMuxService.h
  Communications/PCECallBack.h
  Communications/CommToolProtocolV2.h
  Communications/CRC.h
  Communications/EndpointClient.h
  Communications/CommTool.h
  Communications/PConnectionEnd.h
  Communications/DockerErrors.h
  Communications/PMuxCallBack.h
  Communications/CommErrors.h
  Communications/PMuxTool.h
  Communications/DES.h
  Communications/MNPTool.h
  Communications/MNPOptions.h
  Communications/ConfigCommunications.h
  Communications/Docker.h
  Communications/SerialTool.h
  Communications/CommToolOptions.h
  Communications/CommToolProtocol.h
  Memory\ Manager/SafeHeap.h
  Memory\ Manager/MemMgr.h
  Preference.h
  Locales.h
  ROMData/RSSymbols.h
  ROMData/RSData.h
  ROMData/ResMaker/Reporting.h
  ROMData/ResMaker/SymbolTable.h
)

add_executable ( MessagePad ${MP_SRC_FILES} ${MP_HEADER_FILES})
target_compile_definitions( MessagePad PRIVATE forMac forDarkStar )
target_include_directories ( MessagePad PRIVATE
  ${CMAKE_SOURCE_DIR}
  ${CMAKE_SOURCE_DIR}/Frames
  ${CMAKE_SOURCE_DIR}/UtilityClasses
  ${CMAKE_SOURCE_DIR}/OS
  ${CMAKE_SOURCE_DIR}/NTK
  ${CMAKE_SOURCE_DIR}/CommAPI
  ${CMAKE_SOURCE_DIR}/Frames/Compiler
  ${CMAKE_SOURCE_DIR}/Views
  ${CMAKE_SOURCE_DIR}/Graphics
  ${CMAKE_SOURCE_DIR}/Protocols
  ${CMAKE_SOURCE_DIR}/Stores
  ${CMAKE_SOURCE_DIR}/Utilities
  ${CMAKE_SOURCE_DIR}/Recognition
  ${CMAKE_SOURCE_DIR}/Cards
  ${CMAKE_SOURCE_DIR}/Sound
  ${CMAKE_SOURCE_DIR}/Platform
  ${CMAKE_SOURCE_DIR}/Sound/Codecs
  ${CMAKE_SOURCE_DIR}/Toolbox
  ${CMAKE_SOURCE_DIR}/Testing
  ${CMAKE_SOURCE_DIR}/Packages
  ${CMAKE_SOURCE_DIR}/Compression
  ${CMAKE_SOURCE_DIR}/Memory\ Manager
  ${CMAKE_SOURCE_DIR}/Communications
  ${CMAKE_SOURCE_DIR}/Compression/LZCompression
  ${CMAKE_SOURCE_DIR}/Compression/ZippyCompression
  ${CMAKE_SOURCE_DIR}/Compression/UnicodeCompression
  ${CMAKE_SOURCE_DIR}/Sound/Codecs/gsm-1.0-pl12/inc/
)

target_link_libraries ( MessagePad PRIVATE
  "-framework Cocoa"
  "-framework CoreServices"
  "-framework ApplicationServices"
  "-framework AudioUnit"
  "-framework IOKit"
)
